# C_and_CPP_spbsu-modern-programming-

./: CMakeLists.txt
hw-02_huffman/: .gitignore  CMakeLists.txt  build.ninja  hw-02_huffman_tests
hw-02_huffman/include/: bitstream.h  huffman.h  parser.h  test.h
hw-02_huffman/samples/: allbytesC.txt  allbytesD.txt  book-war-and-peaceC.txt  book-war-and-peaceD.txt  warAndPeace.txt  warAndPeaceC.txt  warAndPeaceCompressed.txt
hw-02_huffman/src/: bitstream.cpp  huffman.cpp  main.cpp  parser.cpp
hw-02_huffman/test/: test.cpp
lab-02_cstrings/: .gitignore  Makefile
lab-02_cstrings/include/: str.h  test_str.h
lab-02_cstrings/src/: str.c  test.c  test_str.c
lab-03_mergesort/: .gitignore  Makefile
lab-03_mergesort/include/: mergesort.h
lab-03_mergesort/src/: main.c  mergesort.c
lab-04_intrusive-list/: .gitignore  CMakeLists.txt  Makefile
lab-04_intrusive-list/include/: clist.h
lab-04_intrusive-list/src/: clist.c  main.c
lab-05_c-io/: Makefile
lab-05_c-io/include/: clist.h  point_list.h
lab-05_c-io/src/: clist.c  main.c  point_list.c
lab-06_int-vector/: .gitignore  Makefile
lab-06_int-vector/include/: my_vector.hpp
lab-06_int-vector/src/: my_vector.cpp
lab-07_matrix/: .gitignore  Makefile
lab-07_matrix/include/: matrix.h
lab-07_matrix/src/: matrix.cpp
lab-08_shared-ptr/: .gitignore  Makefile
lab-08_shared-ptr/include/: matrix.hpp  shared_ptr.hpp
lab-08_shared-ptr/src/: main.cpp  matrix.cpp  shared_ptr.cpp
lab-09_figures/: Makefile
lab-09_figures/include/: Circle.hpp  Figure.hpp  Rectangle.hpp  Scheme.hpp
lab-09_figures/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  Scheme.cpp  main.cpp
lab-10_cppio/: Makefile
lab-10_cppio/include/: bin_manip.h  employees.h
lab-10_cppio/src/: bin_manip.cpp  employees.cpp  main.cpp
lab-11_vector/: .gitignore  Makefile
lab-11_vector/include/: my_vector.hpp  my_vector_impl.hpp
lab-11_vector/src/: main.cpp
lab-12_exceptions/: .gitignore  Makefile
lab-12_exceptions/include/: matrix.h
lab-12_exceptions/src/: main.cpp  matrix.cpp
lab-13_array/: .gitignore
lab-13_array/include/: my_array.h
lab-13_array/src/: main.cpp
lab-14_linq/: .gitignore  CMakeLists.txt
lab-14_linq/include/: linq.hpp
lab-14_linq/src/: test.cpp
(+3 files in other folders)
